--- a/Unreal Projects/ToyCars/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/ToyCars/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -529,20 +529,39 @@ MaterialExpressionConstant.MaterialExpressionConstant=True
 MaterialExpressionConstant.MaterialExpression=True
 MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
 MaterialExpressionConstant3Vector.MaterialExpression=True
+LightmassImportanceVolume.TransformCommon=True
+LightmassImportanceVolume.Replication=True
+LightmassImportanceVolume.BrushSettings=True
+LightmassImportanceVolume.Actor=True
+LandscapeGizmoActiveActor.TransformCommon=True
+LandscapeGizmoActiveActor.LandscapeGizmoActiveActor=True
+LandscapeGizmoActiveActor.Gizmo=True
+LandscapeGizmoActiveActor.Rendering=True
+LandscapeGizmoActiveActor.Replication=True
+LandscapeGizmoActiveActor.Collision=True
+LandscapeGizmoActiveActor.Input=True
+LandscapeGizmoActiveActor.Actor=True
+MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
+MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+SpringArmComponent.AssetUserData=True
+SpringArmComponent.Collision=True
+SpringArmComponent.Physics=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VehicleAdvBP/Blueprints/NotBrokenCar
-MRUItem1=/Game/VehicleAdvBP/Blueprints/Red
-MRUItem2=/Game/VehicleAdvBP/Blueprints/Black
-MRUItem3=/Game/VehicleAdvBP/Blueprints/CarBP
-MRUItem4=/Game/VehicleAdvBP/Blueprints/VehicleAdvGameMode
-MRUItem5=/Game/VehicleAdvBP/Blueprints/WheelData/Vehicle_BackTireDrift
-MRUItem6=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_FrontTireConfig
-MRUItem7=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBack
-MRUItem8=/Game/VehicleAdvBP/Blueprints/WheelData/WheelFront
-MRUItem9=/Game/VehicleAdvBP/Blueprints/VehicleBlueprint
-MRUItem10=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBackDrift
-MRUItem11=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_BackTireConfig
+MRUItem0=/Game/VehicleAdvBP/Blueprints/Brown
+MRUItem1=/Game/VehicleAdvBP/Blueprints/CarBP
+MRUItem2=/Game/VehicleAdvBP/Blueprints/NotBrokenCar
+MRUItem3=/Game/VehicleAdvBP/Blueprints/Red
+MRUItem4=/Game/VehicleAdvBP/Blueprints/Black
+MRUItem5=/Game/VehicleAdvBP/Blueprints/VehicleAdvGameMode
+MRUItem6=/Game/VehicleAdvBP/Blueprints/WheelData/Vehicle_BackTireDrift
+MRUItem7=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_FrontTireConfig
+MRUItem8=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBack
+MRUItem9=/Game/VehicleAdvBP/Blueprints/WheelData/WheelFront
+MRUItem10=/Game/VehicleAdvBP/Blueprints/VehicleBlueprint
+MRUItem11=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBackDrift
+MRUItem12=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_BackTireConfig
 
 [AssetEditorToolkitTabLocation]
 /Game/VehicleAdvBP/Blueprints/VehicleBlueprint.VehicleBlueprint=0
@@ -557,6 +576,7 @@ MRUItem11=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_BackTireConfig
 /Game/VehicleAdvBP/Blueprints/NotBrokenCar.NotBrokenCar=0
 /Game/VehicleAdvBP/Blueprints/Black.Black=0
 /Game/VehicleAdvBP/Blueprints/Red.Red=0
+/Game/VehicleAdvBP/Blueprints/Brown.Brown=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -595,7 +615,7 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [Directories2]
-UNR=../../../../../../Users/10840430/Documents/GitHub/Fall2021/Unreal Projects/ToyCars/Content/VehicleAdvBP/Maps
+UNR=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/ToyCars/Content/VehicleAdvBP/Maps
 BRUSH=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/ToyCars/Content/
 FBX=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/ToyCars/Content/
 FBXAnim=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/ToyCars/Content/
@@ -1425,8 +1445,8 @@ MovieSceneCapture.TimeStamp=2021.08.25-02.31.35
 MovieSceneCapture.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2021.08.25-02.31.28
 BlueprintGraph.LastCompileMethod=Unknown
-HierarchicalLODUtilities.TimeStamp=2021.08.23-23.23.12
-HierarchicalLODUtilities.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2021.08.25-02.31.33
+HierarchicalLODUtilities.LastCompileMethod=External
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1436,9 +1456,9 @@ OnlyBuildVisibility=False
 [DetailCustomWidgetExpansion]
 SkeletalMeshComponent=
 VehicleBlueprint_C=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,
-K2Node_VariableGet=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,
-PropertyWrapper=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,StaticMeshComponent.Collision.Collision,
-K2Node_VariableSet=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+K2Node_VariableGet=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Rendering.LOD,
+PropertyWrapper=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Rendering.LOD,
+K2Node_VariableSet=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Rendering.LOD,
 WheeledVehicleMovementComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,
 SceneComponent=
 BrushComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,
@@ -1447,12 +1467,15 @@ Brush=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rende
 CapsuleComponent=
 PlayerStart=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,
 CarBP_C=
-StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
+StaticMeshComponent=
 BillboardComponent=PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,
 PhysicsConstraintComponent=PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,
-NotBrokenCar_C=
-BoxComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,StaticMeshComponent.Collision.Collision,
+NotBrokenCar_C=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,StaticMeshComponent.Collision.Collision,
+BoxComponent=
 Landscape=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,
+LightmassImportanceVolume=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,StaticMeshComponent.Collision.Collision,
+PostProcessVolume=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,
+SpringArmComponent=
 
 [DetailCategoriesAdvanced]
 WheeledVehicleMovementComponent4W.SteeringSetup=True
@@ -1477,15 +1500,16 @@ ActorComponent=
 Object=
 TireConfig="\"Object.TireConfig.TireFrictionScales\" "
 DataAsset="\"Object.TireConfig.TireFrictionScales\" "
-CarBP_C="\"Object.TurnAmount\" "
-Pawn="\"Object.TurnAmount\" "
-StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+CarBP_C="\"Object.ArmDivider\" "
+Pawn="\"Object.ArmDivider\" "
+StaticMeshComponent=
+MeshComponent=
+PrimitiveComponent=
 SceneComponent=
 PhysicsConstraintComponent="\"Object.Constraint.ComponentName1\" \"Object.Constraint.ComponentName2\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-NotBrokenCar_C="\"Object.TurnAmount\" "
+NotBrokenCar_C=
+LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
@@ -1506,15 +1530,16 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 
 [PlacementMode]
-RecentlyPlaced=/Game/VehicleAdvBP/Blueprints/CarBP.CarBP;
+RecentlyPlaced=/Game/VehicleAdvBP/Blueprints/Brown.Brown;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/VehicleAdvBP/Blueprints/CarBP.CarBP;
 RecentlyPlaced=/Game/VehicleAdvBP/Blueprints/NotBrokenCar.NotBrokenCar;
 
 [MessageLog]
 LastLogListing=PIE
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
