Tweaks and Random Textures

--- a/MobileGame/Assembly-CSharp.csproj
+++ b/MobileGame/Assembly-CSharp.csproj
@@ -73,6 +73,7 @@
      <Compile Include="Assets\Scripts\EventSceneChange.cs" />
      <Compile Include="Assets\Scripts\PlayerMove.cs" />
      <Compile Include="Assets\Datas\DataScripts\EnemyData.cs" />
+     <Compile Include="Assets\Datas\DataScripts\MaterialData.cs" />
      <None Include="Assets\Resources\BillingMode.json" />
      <Reference Include="UnityEngine">
      <HintPath>C:/Program Files/Unity/Hub/Editor/2021.1.16f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
