Small Edits and Boost Unreal

--- a/Unreal Projects/ToyCars/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/ToyCars/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -159,6 +159,7 @@ LastLevel=/Game/VehicleAdvBP/Maps/VehicleAdvExampleMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/VehicleAdvBP/Blueprints/CarBP.CarBP
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -550,18 +551,19 @@ SpringArmComponent.Physics=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/VehicleAdvBP/Blueprints/CarBP
-MRUItem1=/Game/VehicleAdvBP/Blueprints/Brown
-MRUItem2=/Game/VehicleAdvBP/Blueprints/NotBrokenCar
-MRUItem3=/Game/VehicleAdvBP/Blueprints/Red
-MRUItem4=/Game/VehicleAdvBP/Blueprints/Black
-MRUItem5=/Game/VehicleAdvBP/Blueprints/VehicleAdvGameMode
-MRUItem6=/Game/VehicleAdvBP/Blueprints/WheelData/Vehicle_BackTireDrift
-MRUItem7=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_FrontTireConfig
-MRUItem8=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBack
-MRUItem9=/Game/VehicleAdvBP/Blueprints/WheelData/WheelFront
-MRUItem10=/Game/VehicleAdvBP/Blueprints/VehicleBlueprint
-MRUItem11=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBackDrift
-MRUItem12=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_BackTireConfig
+MRUItem1=/Game/StarterContent/Materials/M_Concrete_Poured
+MRUItem2=/Game/VehicleAdvBP/Blueprints/Brown
+MRUItem3=/Game/VehicleAdvBP/Blueprints/NotBrokenCar
+MRUItem4=/Game/VehicleAdvBP/Blueprints/Red
+MRUItem5=/Game/VehicleAdvBP/Blueprints/Black
+MRUItem6=/Game/VehicleAdvBP/Blueprints/VehicleAdvGameMode
+MRUItem7=/Game/VehicleAdvBP/Blueprints/WheelData/Vehicle_BackTireDrift
+MRUItem8=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_FrontTireConfig
+MRUItem9=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBack
+MRUItem10=/Game/VehicleAdvBP/Blueprints/WheelData/WheelFront
+MRUItem11=/Game/VehicleAdvBP/Blueprints/VehicleBlueprint
+MRUItem12=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBackDrift
+MRUItem13=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_BackTireConfig
 
 [AssetEditorToolkitTabLocation]
 /Game/VehicleAdvBP/Blueprints/VehicleBlueprint.VehicleBlueprint=0
@@ -577,6 +579,7 @@ MRUItem12=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_BackTireConfig
 /Game/VehicleAdvBP/Blueprints/Black.Black=0
 /Game/VehicleAdvBP/Blueprints/Red.Red=0
 /Game/VehicleAdvBP/Blueprints/Brown.Brown=1
+/Game/StarterContent/Materials/M_Concrete_Poured.M_Concrete_Poured=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1496,16 +1499,16 @@ WheeledVehicleMovementComponent="\"Object.MechanicalSetup.TransmissionSetup\" \"
 PawnMovementComponent="\"Object.MechanicalSetup.TransmissionSetup\" \"Object.VehicleSetup.WheelSetups\" \"Object.VehicleInput.SteeringInputRate\" \"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.MechanicalSetup.TransmissionSetup\" \"Object.VehicleSetup.WheelSetups\" \"Object.VehicleInput.SteeringInputRate\" \"Object.NavMovement.NavAgentProps\" "
 MovementComponent="\"Object.MechanicalSetup.TransmissionSetup\" \"Object.VehicleSetup.WheelSetups\" \"Object.VehicleInput.SteeringInputRate\" \"Object.NavMovement.NavAgentProps\" "
-ActorComponent=
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 Object=
 TireConfig="\"Object.TireConfig.TireFrictionScales\" "
 DataAsset="\"Object.TireConfig.TireFrictionScales\" "
 CarBP_C=
 Pawn=
-StaticMeshComponent=
-MeshComponent=
-PrimitiveComponent=
-SceneComponent=
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PhysicsConstraintComponent="\"Object.Constraint.ComponentName1\" \"Object.Constraint.ComponentName2\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NotBrokenCar_C=
@@ -1542,6 +1545,7 @@ LastLogListing=PIE
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
