--- a/Unreal Projects/ToyCars/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/ToyCars/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -618,7 +618,7 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [Directories2]
-UNR=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/ToyCars/Content/VehicleAdvBP/Maps
+UNR=../../../../../../Users/10840430/Documents/GitHub/Fall2021/Unreal Projects/ToyCars/Content/VehicleAdvBP/Maps
 BRUSH=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/ToyCars/Content/
 FBX=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/ToyCars/Content/
 FBXAnim=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/ToyCars/Content/
@@ -1499,16 +1499,16 @@ WheeledVehicleMovementComponent="\"Object.MechanicalSetup.TransmissionSetup\" \"
 PawnMovementComponent="\"Object.MechanicalSetup.TransmissionSetup\" \"Object.VehicleSetup.WheelSetups\" \"Object.VehicleInput.SteeringInputRate\" \"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.MechanicalSetup.TransmissionSetup\" \"Object.VehicleSetup.WheelSetups\" \"Object.VehicleInput.SteeringInputRate\" \"Object.NavMovement.NavAgentProps\" "
 MovementComponent="\"Object.MechanicalSetup.TransmissionSetup\" \"Object.VehicleSetup.WheelSetups\" \"Object.VehicleInput.SteeringInputRate\" \"Object.NavMovement.NavAgentProps\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ActorComponent=
 Object=
 TireConfig="\"Object.TireConfig.TireFrictionScales\" "
 DataAsset="\"Object.TireConfig.TireFrictionScales\" "
-CarBP_C=
-Pawn=
-StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+CarBP_C="\"Object.ArmDivider\" "
+Pawn="\"Object.ArmDivider\" "
+StaticMeshComponent=
+MeshComponent=
+PrimitiveComponent=
+SceneComponent=
 PhysicsConstraintComponent="\"Object.Constraint.ComponentName1\" \"Object.Constraint.ComponentName2\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NotBrokenCar_C=
