--- a/Unreal Projects/ToyCars/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/ToyCars/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -548,22 +548,63 @@ MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
 SpringArmComponent.AssetUserData=True
 SpringArmComponent.Collision=True
 SpringArmComponent.Physics=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Accessibility=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+ProgressBar.Localization=True
+K2Node_VariableSet.Events=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+WidgetComponent.Variable=True
+WidgetComponent.TransformCommon=True
+WidgetComponent.Sockets=True
+WidgetComponent.Materials=True
+WidgetComponent.UserInterface=True
+WidgetComponent.Interaction=True
+WidgetComponent.ComponentTick=True
+WidgetComponent.Animation=True
+WidgetComponent.Layers=True
+WidgetComponent.Physics=True
+WidgetComponent.Collision=True
+WidgetComponent.Rendering=True
+WidgetComponent.Navigation=True
+WidgetComponent.VirtualTexture=True
+WidgetComponent.Tags=True
+WidgetComponent.ComponentReplication=True
+WidgetComponent.Cooking=True
+WidgetComponent.Events=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/VehicleAdvBP/Blueprints/CarBP
-MRUItem1=/Game/StarterContent/Materials/M_Concrete_Poured
-MRUItem2=/Game/VehicleAdvBP/Blueprints/Brown
-MRUItem3=/Game/VehicleAdvBP/Blueprints/NotBrokenCar
-MRUItem4=/Game/VehicleAdvBP/Blueprints/Red
-MRUItem5=/Game/VehicleAdvBP/Blueprints/Black
-MRUItem6=/Game/VehicleAdvBP/Blueprints/VehicleAdvGameMode
-MRUItem7=/Game/VehicleAdvBP/Blueprints/WheelData/Vehicle_BackTireDrift
-MRUItem8=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_FrontTireConfig
-MRUItem9=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBack
-MRUItem10=/Game/VehicleAdvBP/Blueprints/WheelData/WheelFront
-MRUItem11=/Game/VehicleAdvBP/Blueprints/VehicleBlueprint
-MRUItem12=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBackDrift
-MRUItem13=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_BackTireConfig
+MRUItem1=/Game/VehicleAdvBP/Blueprints/BoostBar
+MRUItem2=/Game/StarterContent/Materials/M_Concrete_Poured
+MRUItem3=/Game/VehicleAdvBP/Blueprints/Brown
+MRUItem4=/Game/VehicleAdvBP/Blueprints/NotBrokenCar
+MRUItem5=/Game/VehicleAdvBP/Blueprints/Red
+MRUItem6=/Game/VehicleAdvBP/Blueprints/Black
+MRUItem7=/Game/VehicleAdvBP/Blueprints/VehicleAdvGameMode
+MRUItem8=/Game/VehicleAdvBP/Blueprints/WheelData/Vehicle_BackTireDrift
+MRUItem9=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_FrontTireConfig
+MRUItem10=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBack
+MRUItem11=/Game/VehicleAdvBP/Blueprints/WheelData/WheelFront
+MRUItem12=/Game/VehicleAdvBP/Blueprints/VehicleBlueprint
+MRUItem13=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBackDrift
+MRUItem14=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_BackTireConfig
 
 [AssetEditorToolkitTabLocation]
 /Game/VehicleAdvBP/Blueprints/VehicleBlueprint.VehicleBlueprint=0
@@ -580,6 +621,7 @@ MRUItem13=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_BackTireConfig
 /Game/VehicleAdvBP/Blueprints/Red.Red=0
 /Game/VehicleAdvBP/Blueprints/Brown.Brown=1
 /Game/StarterContent/Materials/M_Concrete_Poured.M_Concrete_Poured=0
+/Game/VehicleAdvBP/Blueprints/BoostBar.BoostBar=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -618,7 +660,7 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [Directories2]
-UNR=../../../../../../Users/10840430/Documents/GitHub/Fall2021/Unreal Projects/ToyCars/Content/VehicleAdvBP/Maps
+UNR=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/ToyCars/Content/VehicleAdvBP/Maps
 BRUSH=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/ToyCars/Content/
 FBX=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/ToyCars/Content/
 FBXAnim=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/ToyCars/Content/
@@ -1450,6 +1492,8 @@ BlueprintGraph.TimeStamp=2021.08.25-02.31.28
 BlueprintGraph.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2021.08.25-02.31.33
 HierarchicalLODUtilities.LastCompileMethod=External
+SequencerWidgets.TimeStamp=2021.08.25-02.31.38
+SequencerWidgets.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1503,8 +1547,8 @@ ActorComponent=
 Object=
 TireConfig="\"Object.TireConfig.TireFrictionScales\" "
 DataAsset="\"Object.TireConfig.TireFrictionScales\" "
-CarBP_C="\"Object.ArmDivider\" "
-Pawn="\"Object.ArmDivider\" "
+CarBP_C="\"Object.DriftAmount\" "
+Pawn="\"Object.DriftAmount\" "
 StaticMeshComponent=
 MeshComponent=
 PrimitiveComponent=
@@ -1604,4 +1648,76 @@ bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
+
+[WidgetTemplatesExpanded]
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+bKeyInterpPropertiesOnly=False
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bShowSelectedNodesOnly=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepCursorInPlayRange=True
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+bShowOutlinerInfoColumn=True
+FrameNumberDisplayFormat=Seconds
 
