--- a/Unreal Projects/ToyCars/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/ToyCars/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -159,7 +159,6 @@ LastLevel=/Game/VehicleAdvBP/Maps/VehicleAdvExampleMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/VehicleAdvBP/Blueprints/CarBP.CarBP
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -588,23 +587,29 @@ CanvasPanel.Performance=True
 CanvasPanel.Clipping=True
 CanvasPanel.Navigation=True
 CanvasPanel.Localization=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VehicleAdvBP/Blueprints/CarBP
-MRUItem1=/Game/VehicleAdvBP/Blueprints/BoostBar
+MRUItem0=/Game/StarterContent/Materials/M_Ceramic_Tile_Checker
+MRUItem1=/Game/VehicleAdvBP/Blueprints/CarBP
 MRUItem2=/Game/StarterContent/Materials/M_Concrete_Poured
-MRUItem3=/Game/VehicleAdvBP/Blueprints/Brown
-MRUItem4=/Game/VehicleAdvBP/Blueprints/NotBrokenCar
-MRUItem5=/Game/VehicleAdvBP/Blueprints/Red
-MRUItem6=/Game/VehicleAdvBP/Blueprints/Black
-MRUItem7=/Game/VehicleAdvBP/Blueprints/VehicleAdvGameMode
-MRUItem8=/Game/VehicleAdvBP/Blueprints/WheelData/Vehicle_BackTireDrift
-MRUItem9=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_FrontTireConfig
-MRUItem10=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBack
-MRUItem11=/Game/VehicleAdvBP/Blueprints/WheelData/WheelFront
-MRUItem12=/Game/VehicleAdvBP/Blueprints/VehicleBlueprint
-MRUItem13=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBackDrift
-MRUItem14=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_BackTireConfig
+MRUItem3=/Game/VehicleAdvBP/Blueprints/BoostBar
+MRUItem4=/Game/VehicleAdvBP/Blueprints/Brown
+MRUItem5=/Game/VehicleAdvBP/Blueprints/NotBrokenCar
+MRUItem6=/Game/VehicleAdvBP/Blueprints/Red
+MRUItem7=/Game/VehicleAdvBP/Blueprints/Black
+MRUItem8=/Game/VehicleAdvBP/Blueprints/VehicleAdvGameMode
+MRUItem9=/Game/VehicleAdvBP/Blueprints/WheelData/Vehicle_BackTireDrift
+MRUItem10=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_FrontTireConfig
+MRUItem11=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBack
+MRUItem12=/Game/VehicleAdvBP/Blueprints/WheelData/WheelFront
+MRUItem13=/Game/VehicleAdvBP/Blueprints/VehicleBlueprint
+MRUItem14=/Game/VehicleAdvBP/Blueprints/WheelData/WheelBackDrift
+MRUItem15=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_BackTireConfig
 
 [AssetEditorToolkitTabLocation]
 /Game/VehicleAdvBP/Blueprints/VehicleBlueprint.VehicleBlueprint=0
@@ -622,6 +627,7 @@ MRUItem14=/Game/VehicleAdv/Vehicle/WheelData/Vehicle_BackTireConfig
 /Game/VehicleAdvBP/Blueprints/Brown.Brown=1
 /Game/StarterContent/Materials/M_Concrete_Poured.M_Concrete_Poured=0
 /Game/VehicleAdvBP/Blueprints/BoostBar.BoostBar=0
+/Game/StarterContent/Materials/M_Ceramic_Tile_Checker.M_Ceramic_Tile_Checker=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -660,7 +666,7 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [Directories2]
-UNR=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/ToyCars/Content/VehicleAdvBP/Maps
+UNR=../../../../../../Users/10840430/Documents/GitHub/Fall2021/Unreal Projects/ToyCars/Content/VehicleAdvBP/Maps
 BRUSH=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/ToyCars/Content/
 FBX=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/ToyCars/Content/
 FBXAnim=../../../../../../Users/colli/Documents/Repos/Fall2021/Unreal Projects/ToyCars/Content/
@@ -1533,6 +1539,7 @@ WheeledVehicleMovementComponent4W.ComponentTick=True
 Blueprint.ClassOptions=True
 StaticMeshComponent.Physics=True
 StaticMeshComponent.Collision=True
+StaticMeshActor.Materials=False
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1547,8 +1554,8 @@ ActorComponent=
 Object=
 TireConfig="\"Object.TireConfig.TireFrictionScales\" "
 DataAsset="\"Object.TireConfig.TireFrictionScales\" "
-CarBP_C="\"Object.DriftAmount\" "
-Pawn="\"Object.DriftAmount\" "
+CarBP_C="\"Object.NewSuspensionStrength\" "
+Pawn="\"Object.NewSuspensionStrength\" "
 StaticMeshComponent=
 MeshComponent=
 PrimitiveComponent=
@@ -1561,6 +1568,7 @@ LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettin
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
 DeleteVariableInUse_Warning=False
+Warning_NoPreviewMeshFound=False
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -1577,6 +1585,7 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/VehicleAdvBP/Blueprints/Black.Black;
 RecentlyPlaced=/Game/VehicleAdvBP/Blueprints/Brown.Brown;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
