--- a/Unreal Projects/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -100,6 +100,7 @@ LastExecutedLaunchName=CS514-019
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -749,7 +750,7 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
+ScreenPosition=X=280.000 Y=302.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
